--- a/Rules
+++ b/Rules
@@ -1,4 +1,5 @@
 #!/usr/bin/env ruby
+# -*- coding: utf-8 -*-
 
 # A few helpful tips about the Rules file:
 #
@@ -12,6 +13,22 @@
 #   “content/about.html”). To select all children, grandchildren, … of an
 #   item, use the pattern “/about/*/”; “/about/*” will also select the parent,
 #   because “*” matches zero or more characters.
+
+require "./lib/rule_helper"
+
+# sass
+compile '/assets/stylesheets/*' do
+  unless sass_partial?(item)
+    filter(:sass, :syntax => :scss)
+  end
+end
+
+route '/assets/stylesheets/*' do
+  unless sass_partial?(item)
+    "/stylesheets/#{basename(item.attributes[:filename])}.css" 
+  end
+end
+
 
 compile '*' do
   if item[:extension] == 'css'
