--- a/Rules
+++ b/Rules
@@ -14,12 +14,21 @@
 #   item, use the pattern “/about/*/”; “/about/*” will also select the parent,
 #   because “*” matches zero or more characters.
 
+require "susy"
+require "compass-core"
+require "breakpoint"
 require "./lib/rule_helper"
+
+
+sass_options = {
+  syntax: :scss,
+  load_paths: Compass.configuration.to_sass_engine_options[:load_paths]
+}
 
 # sass
 compile '/assets/stylesheets/*' do
   unless sass_partial?(item)
-    filter(:sass, :syntax => :scss)
+    filter(:sass, sass_options)
   end
 end
 
@@ -44,10 +53,10 @@ end
 route '*' do
   if item[:extension] == 'css'
     # Write item with identifier /foo/ to /foo.css
-    item.identifier.chop + '.css'
+    item.identifier.chop.to_s + '.css'
   elsif item.binary?
     # Write item with identifier /foo/ to /foo.ext
-    item.identifier.chop + '.' + item[:extension]
+    item.identifier.chop.to_s + '.' + item[:extension].to_s
   else
     # Write item with identifier /foo/ to /foo/index.html
     item.identifier + 'index.html'
