finishing home page

--- a/Rules
+++ b/Rules
@@ -20,6 +20,14 @@ require "breakpoint"
 require "./lib/rule_helper"
 
 
+#static
+compile '/static/*/' do
+end
+
+route '/static/*/' do
+  item.identifier.to_s.gsub(/^\/static(\/.*)\/$/, "\\1")
+end
+
 sass_options = {
   syntax: :scss,
   load_paths: Compass.configuration.to_sass_engine_options[:load_paths]
@@ -34,18 +42,25 @@ end
 
 route '/assets/stylesheets/*' do
   unless sass_partial?(item)
-    "/stylesheets/#{basename(item.attributes[:filename])}.css" 
+    "/assets/stylesheets/#{basename(item.attributes[:filename])}.css" 
+  end
+end
+
+# js
+route '/assets/scripts/*' do
+  unless item.identifier.include?("#") # emacs tmp file
+    "/assets/scripts/#{basename(item.attributes[:filename])}.js"
   end
 end
 
 
 compile '*' do
-  if item[:extension] == 'css'
-    # don’t filter stylesheets
-  elsif item.binary?
-    # don’t filter binary items
-  else
+  if item.binary?
+  elsif item.attributes[:filename] =~ /html$/
     filter :erb
+    layout 'default'
+  elsif item.attributes[:filename] =~ /md$/
+    filter :redcarpet
     layout 'default'
   end
 end
